# serialiser

./: CMakeLists.txt  CMakePresets.json  README.md
src/: Serialiser.hpp
test/: CMakeLists.txt  test-serialiser.cpp
